[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
